--- a/slides/outro.html
+++ b/slides/outro.html
@@ -6,9 +6,9 @@
     <div class="cc">
         <img src="./poul/img/creativecommons-by-nc-sa.svg" alt="cc-by-nc-sa"/>
         <div>
-            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
             Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br/>
-            Source code available <a href="https://gitlab.poul.org/corsi/templates/revealjs-poul">here</a>
+            Source code available <a href="https://gitlab.poul.org/corsi/templates/revealjs-poul" target="_blank">here</a>
         </div>
     </div>
 
