--- a/slides/outro.html
+++ b/slides/outro.html
@@ -3,14 +3,53 @@
 
     <img class="logo" src="./poul/img/logo-notext-white.svg" alt="poul logo"/>
 
+    <!-- Here follows license selection, uncomment the wanted license if needed -->
+
+    <!-- CC0 License -->
+    <!--
+    <div class="cc">
+        <img src="./poul/img/creativecommons0.svg" alt="cc0"/>
+        <div>
+            This work is licensed under a <a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">
+            CC0 1.0 Universal (CC0 1.0) Public Domain Dedication </a>.<br/>
+            Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+        </div>
+    </div>
+    -->
+
+    <!-- CC-BY License -->
+    <!--
+    <div class="cc">
+        <img src="./poul/img/creativecommons-by.svg" alt="cc-by"/>
+        <div>
+            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/" target="_blank">
+            Creative Commons Attribution 4.0 International License</a>.<br/>
+            Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+        </div>
+    </div>
+    -->
+
+    <!-- CC-BY-SA License -->
+    <div class="cc">
+        <img src="./poul/img/creativecommons-by-sa.svg" alt="cc-by-sa"/>
+        <div>
+            This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">
+            Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br/>
+            Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+        </div>
+    </div>
+
+    <!-- CC-BY-NC-SA License -->
+    <!--
     <div class="cc">
         <img src="./poul/img/creativecommons-by-nc-sa.svg" alt="cc-by-nc-sa"/>
         <div>
             This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
             Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br/>
-            Source code available <a href="https://gitlab.poul.org/corsi/templates/revealjs-poul" target="_blank">here</a>
+            Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
         </div>
     </div>
+    -->
 
     <ul class="authors">
         <li>Autore &lt;email@email.com&gt;</li>
