--- a/slides/outro.html
+++ b/slides/outro.html
@@ -1,62 +1,61 @@
 <section class="outro">
-	<h1>Thank you!</h1>
+  <h1>Thank you for your attention!</h1>
+  <a class="logo-block" href="https://poul.org/">
+    <img class="logo" data-id="intro-logo" src="./poul/img/logo-notext-white.svg" alt="POuL Logo"/>
+    <img class="logo-text" data-id="intro-logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
+  </a>
 
-	<img alt="poul logo" class="logo" src="./poul/img/logo-notext-white.svg"/>
+  <hr>
+  <!-- CC0 License -->
+  <!--
+  <div class="license">
+    <img src="./poul/img/creativecommons0.svg" alt="cc0"/>
+    <div>
+      This work is licensed under a<br/>
+      <a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">
+      CC0 1.0 Universal (CC0 1.0) Public Domain Dedication </a>.<br/>
+      Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+    </div>
+  </div>
+  -->
+  <!-- CC-BY License -->
+  <!--
+  <div class="license">
+    <img src="./poul/img/creativecommons-by.svg" alt="cc-by"/>
+    <div>
+      This work is licensed under a
+      <a rel="license" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons<br/>
+        Attribution 4.0 International License</a>.<br/>
+      Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+    </div>
+  </div>
+  -->
+  <!-- CC-BY-SA License -->
+  <div class="license">
+    <img src="./poul/img/creativecommons-by-sa.svg" alt="cc-by-sa"/>
+    <div>
+      This work is licensed under a
+      <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons<br/>
+        Attribution-ShareAlike 4.0 International License</a>.<br/>
+      Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+    </div>
+  </div>
+  <!-- CC-BY-NC-SA License -->
+  <!--
+  <div class="license">
+    <img alt="cc-by-nc-sa" src="./poul/img/creativecommons-by-nc-sa.svg"/>
+    <div>
+      This work is licensed under a
+      <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license" target="_blank">Creative Commons<br/>
+        Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br/>
+      Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+    </div>
+  </div>
+  -->
 
-	<!-- Here follows license selection, uncomment the wanted license if needed -->
-
-	<!-- CC0 License -->
-	<!--
-	<div class="cc">
-		<img src="./poul/img/creativecommons0.svg" alt="cc0"/>
-		<div>
-			This work is licensed under a<br/>
-			<a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">
-			CC0 1.0 Universal (CC0 1.0) Public Domain Dedication </a>.<br/>
-			Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
-		</div>
-	</div>
-	-->
-
-	<!-- CC-BY License -->
-	<!--
-	<div class="cc">
-		<img src="./poul/img/creativecommons-by.svg" alt="cc-by"/>
-		<div>
-			This work is licensed under a
-			<a rel="license" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons<br/>
-				Attribution 4.0 International License</a>.<br/>
-			Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
-		</div>
-	</div>
-	-->
-
-	<!-- CC-BY-SA License -->
-	<div class="cc">
-		<img src="./poul/img/creativecommons-by-sa.svg" alt="cc-by-sa"/>
-		<div>
-			This work is licensed under a
-			<a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons<br/>
-				Attribution-ShareAlike 4.0 International License</a>.<br/>
-			Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
-		</div>
-	</div>
-
-	<!-- CC-BY-NC-SA License -->
-	<!--
-	<div class="cc">
-		<img alt="cc-by-nc-sa" src="./poul/img/creativecommons-by-nc-sa.svg"/>
-		<div>
-			This work is licensed under a
-			<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license" target="_blank">Creative Commons<br/>
-				Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br/>
-			Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
-		</div>
-	</div>
-	-->
-
-	<ul class="authors">
-		<li>Autore &lt;email@email.com&gt;</li>
-		<li>Autore &lt;email@email.com&gt;</li>
-	</ul>
+  <!-- Talk authors -->
+  <ul class="authors-block">
+    <li><b>Richard M. Stallman</b><div><a href="mailto:god@poul.org">god@poul.org</a><div></li>
+    <li><b>Paola</b><div><a href="mailto:paola@poul.org">paola@poul.org</a></div></li>
+  </ul>
 </section>
