--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         <section class="poul-info">
           <section data-external-replace="./slides/poul-intro/poul-intro.html"></section>
           <section class="poul-map" data-background-image="./slides/poul-intro/images/sede.jpg" data-background-opacity="0.2">
-            <a class="title-block" href="https://poul.org/about">
+            <a class="title-block has-noemoji" href="https://poul.org/about">
               <img class="logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
               <div class="vertical-line"></div>
               <h2>Where are we?</h2>
             </a>
             <p>Politecnico di Milano (Leonardo campus), building 9A<br><b>Come visit us!</b></p>
             <p><small>Make sure to check <a href="https://bits.poul.org/">BITS</a> to know if the headquarters are open!</small></p>
-            <div id="map" style="width:40em; height:30em"/>
+            <div class="nolinkemoji" id="map" style="width:40em; height:30em"/>
             <script src="./slides/poul-intro/poul-leafletmap.js"></script>
           </section>
         </section>
