--- a/slides/intro.html
+++ b/slides/intro.html
@@ -1,4 +1,4 @@
-<section class="intro" data-auto-animate>
+<section class="intro nolinkemoji" data-auto-animate>
   <!-- Course edition -->
   <a class="course-block text-mix" href="https://poul.org/courses/windows/">
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Windows_logo_-_2021.svg" alt="Windows Logo" width="50em"/>
