--- a/slides/outro.html
+++ b/slides/outro.html
@@ -1,6 +1,6 @@
 <section class="outro">
   <h1>Thank you for your attention!</h1>
-  <a class="logo-block" href="https://poul.org/">
+  <a class="logo-block has-noemoji" href="https://poul.org/">
     <img class="logo" data-id="intro-logo" src="./poul/img/logo-notext-white.svg" alt="POuL Logo"/>
     <img class="logo-text" data-id="intro-logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
   </a>
@@ -35,9 +35,9 @@
     <img src="./poul/img/creativecommons-by-sa.svg" alt="cc-by-sa"/>
     <div>
       This work is licensed under a
-      <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons<br/>
+      <a class="noemoji" rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons<br/>
         Attribution-ShareAlike 4.0 International License</a>.<br/>
-      Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+      Source code available <a class="noemoji" href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
     </div>
   </div>
   <!-- CC-BY-NC-SA License -->
@@ -55,7 +55,7 @@
 
   <!-- Talk authors -->
   <ul class="authors-block">
-    <li><b>Richard M. Stallman</b><div><a href="mailto:god@poul.org">god@poul.org</a><div></li>
-    <li><b>Paola</b><div><a href="mailto:paola@poul.org">paola@poul.org</a></div></li>
+    <li><b>Richard M. Stallman</b><div><a class="noemoji" href="mailto:god@poul.org">god@poul.org</a><div></li>
+    <li><b>Paola</b><div><a class="noemoji" href="mailto:paola@poul.org">paola@poul.org</a></div></li>
   </ul>
 </section>
