Missing target blank

--- a/slides/outro.html
+++ b/slides/outro.html
@@ -1,6 +1,6 @@
 <section class="outro">
   <h1>Thank you for your attention!</h1>
-  <a class="logo-block has-noemoji" href="https://poul.org/">
+  <a class="logo-block has-noemoji" href="https://poul.org/" target="_blank">
     <img class="logo" data-id="intro-logo" src="./poul/img/logo-notext-white.svg" alt="POuL Logo"/>
     <img class="logo-text" data-id="intro-logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
   </a>
