--- a/slides/intro.html
+++ b/slides/intro.html
@@ -1,6 +1,6 @@
 <section class="intro nolinkemoji" data-auto-animate>
   <!-- Course edition -->
-  <a class="course-block text-mix" href="https://poul.org/courses/windows/">
+  <a class="course-block text-mix" href="https://poul.org/courses/windows/" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Windows_logo_-_2021.svg" alt="Windows Logo" width="50em"/>
     <h3 style="color: #357EC7;">Windows</h3> 
     <h3>course 2022</h3>
@@ -14,7 +14,7 @@
   <div class="subtitle-block text-mix">
     <h3>How to use the <i>best</i> proprietary text editor</h3>
   </div>
-  <a class="logo-block" href="https://poul.org/">
+  <a class="logo-block" href="https://poul.org/" target="_blank">
     <img class="logo" data-id="intro-logo" src="./poul/img/logo-notext-white.svg" alt="POuL Logo"/>
     <img class="logo-text" data-id="intro-logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
   </a>
