--- a/slides/poul-intro/poul-intro.html
+++ b/slides/poul-intro/poul-intro.html
@@ -1,4 +1,4 @@
-<section data-auto-animate data-background-image="./poul/img/logo-notext-white.svg" data-background-opacity="0.08" data-background-size="contain">
+<section class="poul-intro" data-auto-animate data-background-image="./poul/img/logo-notext-white.svg" data-background-opacity="0.08" data-background-size="contain">
   <a class="title-block has-noemoji" href="https://poul.org/about/">
     <img class="logo-text" data-id="intro-logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
     <div class="vertical-line"></div>
@@ -6,7 +6,7 @@
   </a>
   <p style="margin-top: 4em;">We are a non-profit <i>association</i> and <i>hacking community</i><br> formed by students from <a href="https://polimi.it/">Politecnico di Milano</a></p>
 </section>
-<section data-background-image="./slides/poul-intro/images/course.jpg" data-background-opacity="0.2">
+<section class="poul-intro" data-background-image="./slides/poul-intro/images/course.jpg" data-background-opacity="0.2">
   <a class="title-block has-noemoji" href="https://poul.org/courses">
     <img class="logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
     <div class="vertical-line"></div>
@@ -14,7 +14,7 @@
   </a>
   <p style="margin-top: 4em;">We promote the use of <b><a href="https://en.wikipedia.org/wiki/Free_and_open-source_software">Free and Open Source Software</a></b> through courses, talks and workshops</p>
 </section>
-<section data-background-image="./slides/poul-intro/images/events.jpg" data-background-opacity="0.2">
+<section class="poul-intro" data-background-image="./slides/poul-intro/images/events.jpg" data-background-opacity="0.2">
   <a class="title-block has-noemoji" href="https://gitlab.poul.org/project">
     <img class="logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
     <div class="vertical-line"></div>
@@ -22,7 +22,7 @@
   </a>
   <p style="margin-top: 4em;">We tinker with <b>software and hardware</b> and share knowledge with anyone who is curious about technology</p>
 </section>
-<section data-background-image="./slides/poul-intro/images/cc.png" data-background-opacity="0.2">
+<section class="poul-intro" data-background-image="./slides/poul-intro/images/cc.png" data-background-opacity="0.2">
   <a class="title-block noemoji has-noemoji" href="https://poul.org">
     <img class="logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
     <div class="vertical-line"></div>
