Implement new outro template

--- a/slides/intro.html
+++ b/slides/intro.html
@@ -1,26 +1,30 @@
 <section class="intro nolinkemoji" data-auto-animate>
-  <!-- Course edition -->
-  <a class="course-block text-mix" href="https://poul.org/courses/windows/" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Windows_logo_-_2021.svg" alt="Windows Logo" width="50em"/>
-    <h3 style="color: #357EC7;">Windows</h3> 
-    <h3>course 2022</h3>
-  </a>
-  <!-- Talk title -->
-  <div class="title-block text-mix">
-    <h1>Coding with Notepad</h1>
-  </div>
-  <hr>
-  <!-- Talk subtitle -->
-  <div class="subtitle-block text-mix">
-    <h3>How to use the <i>best</i> proprietary text editor</h3>
-  </div>
-  <a class="logo-block" href="https://poul.org/" target="_blank">
-    <img class="logo" data-id="intro-logo" src="./poul/img/logo-notext-white.svg" alt="POuL Logo"/>
-    <img class="logo-text" data-id="intro-logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
-  </a>
-  <!-- Talk authors -->
-  <ul class="authors-block">
-    <li><b>Richard M. Stallman</b><div><a href="mailto:god@poul.org">god@poul.org</a><div></li>
-    <li><b>Paola</b><div><a href="mailto:paola@poul.org">paola@poul.org</a></div></li>
-  </ul>
+    <div class="intro__talk-info">
+        <a class="intro__course-title" href="https://poul.org/courses/windows/" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/87/Windows_logo_-_2021.svg" alt="Windows Logo"
+                 width="50em"/>
+            <h3><span style="color: #357EC7;">Windows</span> course 2022</h3>
+        </a>
+
+        <h1 class="intro__talk-title">Coding with Notepad</h1>
+        <hr>
+        <h2 class="intro__talk-subtitle">How to use the <i>best</i> proprietary text editor</h2>
+    </div>
+
+    <a class="intro__logo" href="https://poul.org/" target="_blank">
+        <img class="intro__logo__image" data-id="intro-logo" src="./poul/img/logo-notext-white.svg" alt="POuL logo"/>
+        <img class="intro__logo__text" data-id="intro-logo-text" src="./poul/img/logo-text-white.svg"
+             alt="POuL logo text"/>
+    </a>
+
+    <ul class="intro__speakers">
+        <li>
+            <b>Richard M. Stallman</b>
+            <a href="mailto:god@poul.org">god@poul.org</a>
+        </li>
+        <li>
+            <b>Paola</b>
+            <a href="mailto:paola@poul.org">paola@poul.org</a>
+        </li>
+    </ul>
 </section>
