--- a/slides/outro.html
+++ b/slides/outro.html
@@ -1,61 +1,82 @@
-<section class="outro">
-  <h1>Thank you for your attention!</h1>
-  <a class="logo-block" href="https://poul.org/" target="_blank">
-    <img class="logo" data-id="intro-logo" src="./poul/img/logo-notext-white.svg" alt="POuL Logo"/>
-    <img class="logo-text" data-id="intro-logo-text" src="./poul/img/logo-text-white.svg" alt="Politecnico Open unix Labs"/>
-  </a>
+<section class="outro nolinkemoji">
+    <h1>Thank you for your attention!</h1>
+    <div class="outro__container">
+        <div class="outro__left-column">
+            <div class="outro__course-title">
+                <h1><span style="color: #357EC7;">Windows</span> course 2022</h1>
+                <h2>Coding with Notepad</h2>
+            </div>
+            <a class="outro__logo" href="https://poul.org" target="_blank">
+                <img class="outro__logo__image" src="./poul/img/logo-notext-white.svg" alt="POuL logo"/>
+                <img class="outro__logo__text" src="./poul/img/logo-text-white.svg" alt="POuL logo text"/>
+            </a>
+        </div>
 
-  <hr>
-  <!-- CC0 License -->
-  <!--
-  <div class="license">
-    <img src="./poul/img/creativecommons0.svg" alt="cc0"/>
-    <div>
-      This work is licensed under a<br/>
-      <a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">
-      CC0 1.0 Universal (CC0 1.0) Public Domain Dedication </a>.<br/>
-      Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+        <div class="outro__right-column">
+            <div class="outro__authors-section">
+                <h4>Speakers</h4>
+                <ul>
+                    <li>
+                        <b>Richard M. Stallman</b>
+                        <a href="mailto:god@poul.org">god@poul.org</a>
+                    </li>
+                    <li>
+                        <b>Paola</b>
+                        <a href="mailto:paola@poul.org">paola@poul.org</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="outro__authors-section">
+                <h4>Slides authors</h4>
+                <ul>
+                    <li>
+                        <b>Richard M. Stallman</b>
+                        <a href="mailto:god@poul.org">god@poul.org</a>
+                    </li>
+                    <li>
+                        <b>Paola</b>
+                        <a href="mailto:paola@poul.org">paola@poul.org</a>
+                    </li>
+                    <li>
+                        <b>Tux</b>
+                        <a href="mailto:tux@poul.org">tux@poul.org</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="outro__authors-section">
+                <h4>Special thanks to</h4>
+                <ul style="font-size: 0.6em"><!--Use font-size with em unit to prevent overflow-->
+                    <li>
+                        <b>Richard M. Stallman</b>
+                        <a href="mailto:god@poul.org">god@poul.org</a>
+                    </li>
+                    <li>
+                        <b>Paola</b>
+                        <a href="mailto:paola@poul.org">paola@poul.org</a>
+                    </li>
+                    <li>
+                        <b>Tux</b>
+                        <a href="mailto:tux@poul.org">tux@poul.org</a>
+                    </li>
+                    <li>
+                        <b>GNU</b>
+                        <a href="mailto:gnu@poul.org">gnu@poul.org</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
-  -->
-  <!-- CC-BY License -->
-  <!--
-  <div class="license">
-    <img src="./poul/img/creativecommons-by.svg" alt="cc-by"/>
-    <div>
-      This work is licensed under a
-      <a rel="license" href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons<br/>
-        Attribution 4.0 International License</a>.<br/>
-      Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
-    </div>
-  </div>
-  -->
-  <!-- CC-BY-SA License -->
-  <div class="license">
-    <img src="./poul/img/creativecommons-by-sa.svg" alt="cc-by-sa"/>
-    <div>
-      This work is licensed under a
-      <a class="nolinkemoji" rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons<br/>
-        Attribution-ShareAlike 4.0 International License</a>.<br/>
-      Source code available <a class="nolinkemoji" href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
-    </div>
-  </div>
-  <!-- CC-BY-NC-SA License -->
-  <!--
-  <div class="license">
-    <img alt="cc-by-nc-sa" src="./poul/img/creativecommons-by-nc-sa.svg"/>
-    <div>
-      This work is licensed under a
-      <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" rel="license" target="_blank">Creative Commons<br/>
-        Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br/>
-      Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
-    </div>
-  </div>
-  -->
 
-  <!-- Talk authors -->
-  <ul class="authors-block">
-    <li><b>Richard M. Stallman</b><div><a class="nolinkemoji" href="mailto:god@poul.org">god@poul.org</a><div></li>
-    <li><b>Paola</b><div><a class="nolinkemoji" href="mailto:paola@poul.org">paola@poul.org</a></div></li>
-  </ul>
+    <div class="outro__license">
+        <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">
+            <img src="./poul/img/creativecommons-by-sa.svg" alt="cc-by-sa"/>
+        </a>
+        <div>
+            This work is licensed under a
+            <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
+                Commons<br/>
+                Attribution-ShareAlike 4.0 International License</a>.<br/>
+            Source code available <a href="https://gitlab.poul.org/corsi/" target="_blank">here</a>
+        </div>
+    </div>
 </section>
