Restore history setting

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         controls: false,
         slideNumber: true,
         navigationMode: 'linear',
+        history: true,
         transition: 'none',
         display: 'flex',
         plugins: [RevealZoom, RevealNotes, RevealSearch, RevealMarkdown, RevealHighlight, RevealMath.MathJax3, LinkEmoji, BetterPrint, ButtonFramework],
